--- a/Plataforma Web/.env
+++ b/Plataforma Web/.env
@@ -1,20 +1,20 @@
 INFLUXDB_DB=iescelia_db
-INFLUXDB_USERNAME=root
-INFLUXDB_PASSWORD=secret-password
+INFLUXDB_USERNAME=******
+INFLUXDB_PASSWORD=******
 INFLUXDB_ORG=my-init-org
 INFLUXDB_BUCKET=my-init-bucket
 INFLUXDB_TOKEN=secret-token
-URLINFLUX=http://165.227.126.18:1500
+URLINFLUX=http://XXX.XXX.XXX.XXX:XXXXXX
 MEASUREMENT=data_sensor
 
-CHATID=-4541042429
+CHATID=******
 
-MOSQUITTO_HOST=165.227.126.18
-MOSQUITTO_PORT=1603
-MOSQUITTO_USERNAME=mosquitto
-MOSQUITTO_PASSWORD=mosquitto
+MOSQUITTO_HOST=XXX.XXX.XXX.XXX
+MOSQUITTO_PORT=XXXXX
+MOSQUITTO_USERNAME=******
+MOSQUITTO_PASSWORD=******
 
-MONGODB=mongodb://165.227.126.18:27018
-MONGODB_USERNAME=root
-MONGODB_PASSWORD=serviceIOT2024*
+MONGODB=mongodb://XXX.XXX.XXX.XXX:XXXXXX
+MONGODB_USERNAME=******
+MONGODB_PASSWORD=******
 MONGODB_DBNAME=sena_iot
